--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css" type="text/css">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <title>Tea Cozy - Tea Shop</title>
 </head>
+
 <body>
-<h1>Hello World!</h1>
+  <header>
+    <img src="./assets/img-tea-cozy-logo.png" alt="Tea Cozy Logo">
+    <nav>
+      <ul>
+        <li><a href="#mission">Mission</a></li>
+        <li><a href="#featured"></a>Featured Tea</li>
+        <li><a href="#locations"></a>Locations</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="mission">
+      <img src="./assets/img-mission-background.jpg" alt="Dried tea in a glass jar on a table, viewed from above">
+      <h2>Mission</h2>
+      <h4>Hand-picked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </section>
+    <section id="featured">
+
+    </section>
+    <section id="locations">
+
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
