Fix link in headers

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav>
       <ul>
         <li><a href="#mission">Mission</a></li>
-        <li><a href="#featured"></a>Featured Tea</li>
-        <li><a href="#locations"></a>Locations</li>
+        <li><a href="#featured">Featured Tea</a></li>
+        <li><a href="#locations">Locations</a></li>
       </ul>
     </nav>
   </header>
