Mission statement index and styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   </header>
   <main>
     <section id="mission">
-      <img src="./assets/img-mission-background.jpg" alt="Dried tea in a glass jar on a table, viewed from above">
-      <h2>Mission</h2>
+      <h2>Our Mission</h2>
       <h4>Hand-picked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </section>
     <section id="featured">
