Add feature section to index.html

--- a/index.html
+++ b/index.html
@@ -27,9 +27,34 @@
       <h4>Hand-picked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </section>
     <section id="featured">
-
+      <h2>Tea of the Month</h2>
+      <h4>What's steeping at The Tea Cozy?</h4>
+      <div class="container featured">
+        <div id="item1" class="box">
+          <img src="assets/img-berryblitz.jpg" alt="Tea cup from above with a few red berries bobbing in the tea">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div id="item2" class="box">
+          <img src="assets/img-spiced-rum.jpg" alt="">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div id="item3" class="box">
+          <img src="assets/img-donut.jpg" alt="">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div id="item4" class="box">
+          <img src="assets/img-myrtle-ave.jpg" alt="">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div id="item5" class="box">
+          <img src="assets/img-bedford-bizarre.jpg" alt="">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
     </section>
     <section id="locations">
+      <h2>Locations</h2>
+      
 
     </section>
   </main>
