Add base content for index.html

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
       <h2>Tea of the Month</h2>
       <h4>What's steeping at The Tea Cozy?</h4>
       <div class="container featured">
-        <div id="item1" class="box">
+        <div id="product1" class="box">
           <img src="assets/img-berryblitz.jpg" alt="Tea cup from above with a few red berries bobbing in the tea">
           <h4>Fall Berry Blitz Tea</h4>
         </div>
-        <div id="item2" class="box">
+        <div id="product2" class="box">
           <img src="assets/img-spiced-rum.jpg" alt="">
           <h4>Spiced Rum Tea</h4>
         </div>
-        <div id="item3" class="box">
+        <div id="product3" class="box">
           <img src="assets/img-donut.jpg" alt="">
           <h4>Seasonal Donuts</h4>
         </div>
-        <div id="item4" class="box">
+        <div id="product4" class="box">
           <img src="assets/img-myrtle-ave.jpg" alt="">
           <h4>Myrtle Ave Tea</h4>
         </div>
-        <div id="item5" class="box">
+        <div id="product5" class="box">
           <img src="assets/img-bedford-bizarre.jpg" alt="">
           <h4>Bedford Bizarre Tea</h4>
         </div>
@@ -54,12 +54,35 @@
     </section>
     <section id="locations">
       <h2>Locations</h2>
-      
-
+      <div class="container locations">
+        <div id="location1" class="box">
+          <h3>Location1</h3>
+          <p>Street</p>
+          <p>Floor</p>
+          <p>County</p>
+        </div>
+        <div id="location2" class="box">
+          <h3>Location2</h3>
+          <p>Street</p>
+          <p>Floor</p>
+          <p>County</p>
+        </div>
+        <div id="location3" class="box">
+          <h3>Location3</h3>
+          <p>Street</p>
+          <p>Floor</p>
+          <p>County</p>
+        </div>
+      </div>
+    </section>
+    <section class="contact">
+      <h2>The Tea Cozy</h2>
+      <a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a>
+      <a href="tel:1-917-555-8904">917-555-8904</a>
     </section>
   </main>
   <footer>
-
+    <p>&copy; The Tea Cozy 2017</p>
   </footer>
 </body>
 
