Add location info

--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
       <h2>Locations</h2>
       <div class="container locations">
         <div id="location1" class="box">
-          <h3>Location1</h3>
-          <p>Street</p>
-          <p>Floor</p>
-          <p>County</p>
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
         </div>
         <div id="location2" class="box">
-          <h3>Location2</h3>
-          <p>Street</p>
-          <p>Floor</p>
-          <p>County</p>
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
         </div>
         <div id="location3" class="box">
-          <h3>Location3</h3>
-          <p>Street</p>
-          <p>Floor</p>
-          <p>County</p>
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
         </div>
       </div>
     </section>
