--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         </div>
       </div>
     </section>
-    <section class="contact">
+    <section id="contact">
       <h2>The Tea Cozy</h2>
       <a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a>
       <a href="tel:1-917-555-8904">917-555-8904</a>
     </section>
   </main>
   <footer>
-    <p>&copy; The Tea Cozy 2017</p>
+    <p>&copy; 2017 The Tea Cozy</p>
   </footer>
 </body>
 
