--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
     </section>
     <section id="contact">
       <h2>The Tea Cozy</h2>
-      <a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a>
-      <a href="tel:1-917-555-8904">917-555-8904</a>
+      <h5><a href="mailto:contact@theteacozy.com">contact@theteacozy.com</a></h5>
+      <h5><a href="tel:1-917-555-8904">917-555-8904</a></h5>
     </section>
   </main>
   <footer>
-    <p>&copy; 2017 The Tea Cozy</p>
+    <h5>&copy; 2017 The Tea Cozy</h5>
   </footer>
 </body>
 
