Rename flex container class

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="featured">
       <h2>Tea of the Month</h2>
       <h4>What's steeping at The Tea Cozy?</h4>
-      <div class="container featured">
+      <div class="flex-container featured">
         <div id="product1" class="box">
           <img src="assets/img-berryblitz.jpg" alt="Tea cup from above with a few red berries bobbing in the tea">
           <h4>Fall Berry Blitz Tea</h4>
@@ -53,7 +53,7 @@
     </section>
     <section id="locations">
       <h2>Locations</h2>
-      <div class="container locations">
+      <div class="flex-container locations">
         <div id="location1" class="box">
           <h3>Downtown</h3>
           <p>384 West 4th St</p>
